ytdlp_frontend/static/styles.css
:root {
    font-family: 'Courier New', Courier, monospace;
}

form * {
    font-size: x-large;
}

input,
textarea,
option,
select,
.choices * {
    font-size: medium;
    font-family: 'Courier New', Courier, monospace;
}

.textinput {
    display: flex;
    justify-content: center;
}

body {
    display: grid;
    grid-template-columns: auto minmax(240px, 720px) auto;
    margin: 0;
    height: 100vh;
    width: 100vw;
}

body>strong {
    padding: 10px;
    font-size: medium;
}

form {
    width: 100%
}

.inputsContainer {
    display: grid;
    grid-template-columns: 1fr minmax(400px,fill-content) 1fr;
    width: 100%;
}

.inputs {
    display: grid;
    grid-template-columns: min-content 1fr;
    gap: 20px;
    width: 100%;
}

.inputRow {
    display: contents;
}

.item {
    display: flex;
    text-align: right;
    align-items: center;
    justify-content: right;
}

.submit {
    display: flex;
    margin-top: 1em;
    justify-content: center;
    width: 100%;
}

.submit>input {
    padding: 0.5em;
    width: 100%;
}

.stdout {
    display: flex;
    height: calc(100% - 10px);
    width: calc(100% - 40px);
    margin: 10px;
    padding: 10px;
    border: 2px solid black;
    overflow-y: auto;
    font-size: x-small;
}

.closeButton {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  font-size: large;
  height: 1em;
  width: 1em;
  border: none;
  border-radius: 50%;
  cursor: pointer;
  background-size: contain;
  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg>');
}

.closeButton:hover {
  filter: invert();
}

.tabsContainer {
  overflow: auto;
}

.tabsEmptyPlaceholder {
  padding: 14px;
  margin-left: 4px;
}

.tabsEmptyPlaceholder:not(:only-child) {
  display: none;
}

/**
 * Tabs
 */
.tabs {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 10px;
}
.tabs label {
  display: grid;
  grid-template-columns: auto 1fr auto;
  padding: 5px;
  gap: 5px;
  font-weight: bold;
  background-color: white;
  transition: background ease 0.2s;
  cursor: pointer;
  font-size: large;
  border: 1px black solid;
}
.tabs label:hover,
.tabs input[type="checkbox"]:checked + .container label {
  border: 1px white solid;
  filter: invert();
  transition: background ease 0.2s;
}
.tabs .tab {
  display: none;
  /* padding: 1rem; */
  background: #fff;
  font-size: x-small;
  padding: 5px;
  border: 1px solid black;
}
.tabs .container {
  margin: 0;
}
.tabs input[type="checkbox"] {
  display: none;
}
.tabs input[type="checkbox"]:not(:checked) + .container {
  padding-top: 0px;
  padding-bottom: 0px;
  border-top: none;
  border-bottom: none;
}
.tabs input[type="checkbox"]:checked + .container label {
  background: #fff;
}
.tabs input[type="checkbox"]:checked + .container > .video-title + .tab {
  display: block;
}

@media (max-width: 45em) {
  .tabs .tab,
  .tabs label {
    order: initial;
  }
  .tabs label {
    margin-right: 0;
    margin-top: 0.2rem;
  }
}

/**
 * Loading spinner
 */

.loader {
  border: 0.2em solid lightgray; /* Light grey */
  border-top: 0.2em solid black; /* Blue */
  border-radius: 50%;
  width: 0.6em;
  height: 0.6em;
  animation: spin 0.8s linear infinite;
}

.success,
.fail {
  height: 1em;
  width: 1em;
  background-size: contain;
}

.success {
  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"></path><path d="M9.999 13.587 7.7 11.292l-1.412 1.416 3.713 3.705 6.706-6.706-1.414-1.414z"></path></svg>');
}

.fail {
  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm4.207 12.793-1.414 1.414L12 13.414l-2.793 2.793-1.414-1.414L10.586 12 7.793 9.207l1.414-1.414L12 10.586l2.793-2.793 1.414 1.414L13.414 12l2.793 2.793z"></path></svg>');
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

